--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -35,7 +35,7 @@ jobs:
           plugin_anilist_medias: anime, manga
           plugin_anilist_sections: favorites
           plugin_anilist_shuffle: yes
-          plugin_anilist_user: Soitora
+          plugin_anilist_user: Blimblim
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
