--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -33,7 +33,7 @@ jobs:
           plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 22
           plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites
+          plugin_anilist_sections: favorites, watching, characters
           plugin_anilist_shuffle: yes
           plugin_anilist_user: Blimblim
           plugin_isocalendar: yes
