--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: BlimblimCFT/metrics@master
         with: 
           token: ${{ secrets.METRICS_TOKEN }}
-          user: BlimblimCFT
+          user: GeovaneSFT
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Sao_Paulo
