--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: BlimblimCFT/metrics@master
+      - uses: GeovaneSFT/metrics@master
         with: 
           token: ${{ secrets.METRICS_TOKEN }}
           user: GeovaneSFT
