--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,13 +19,13 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Sao_Paulo
-          plugin_anilist: yes
-          plugin_anilist_limit: 2
-          plugin_anilist_limit_characters: 22
-          plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites, watching, characters
-          plugin_anilist_shuffle: yes
-          plugin_anilist_user: Blimblim
+          # plugin_anilist: yes
+          # plugin_anilist_limit: 2
+          # plugin_anilist_limit_characters: 22
+          # plugin_anilist_medias: anime, manga
+          # plugin_anilist_sections: favorites, watching, characters
+          # plugin_anilist_shuffle: yes
+          # plugin_anilist_user: Blimblim
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
