--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,41 +1,84 @@
+# Licensed under The Unlicense
+# Feel free to reuse, edit and redistribute this workflow as you wish, no credits needed
+# See https://github.com/lowlighter/metrics for documentation about how to use metrics action
+
 name: Metrics
 on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # 🌏 Think about the planet! No need to update stats too frequently
+  schedule: [{cron: "0 16 * * *"}]
+  # 💡 The following line lets you run workflow manually from the action tab!
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
 jobs:
-  github-metrics:
+  metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - uses: GeovaneSFT/metrics@latest
-        with: 
+
+      - name: 🦑 Medias
+        if: ${{ success() || failure() }}
+        uses: GeovaneSFT/metrics@latest
+        with:
+          filename: medias.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          user: GeovaneSFT
-          template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: America/Sao_Paulo
-          # plugin_anilist: yes
-          # plugin_anilist_limit: 2
-          # plugin_anilist_limit_characters: 22
-          # plugin_anilist_medias: anime, manga
-          # plugin_anilist_sections: favorites, watching, characters
-          # plugin_anilist_shuffle: yes
-          # plugin_anilist_user: Blimblim
+          base: ""
+          config_order: anilist, music
+          # output_action: gist
+          # committer_gist: ${{ secrets.GIST }}
+          plugin_anilist: yes
+          plugin_anilist_medias: anime
+          plugin_anilist_sections: favorites, characters
+          plugin_anilist_limit: 2
+          plugin_anilist_limit_characters: 22
+          plugin_music: yes
+          plugin_music_playlist: https://music.youtube.com/playlist?list=PL_6rCoqHEIvByxWMULNSrpQBeKMywJfrD&si=BzF7jxP3gpDkWoxw
+          plugin_music_limit: 9
+
+      - name: 🦑 Achievements
+        if: ${{ success() || failure() }}
+        uses: GeovaneSFT/metrics@latest
+        with:
+          filename: achievements.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          # output_action: gist
+          # committer_gist: ${{ secrets.GIST }}
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_fortune: yes
+
+      - name: 🦑 Sponsors
+        if: ${{ success() || failure() }}
+        uses: GeovaneSFT/metrics@latest
+        with:
+          filename: sponsors.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          # output_action: gist
+          # committer_gist: ${{ secrets.GIST }}
+          plugin_sponsors: yes
+          plugin_sponsors_past: yes
+          plugin_sponsorships: yes
+          plugin_sponsorships_sections: amount
+
+      - name: 🦑 General
+        if: ${{ success() || failure() }}
+        uses: GeovaneSFT/metrics@latest
+        with:
+          filename: general.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: header
+          base_indepth: yes
+          config_order: base.header, isocalendar, languages, notable, discussions, topics
+          # output_action: gist
+          # committer_gist: ${{ secrets.GIST }}
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
           plugin_languages: yes
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
-          plugin_lines: yes
+          plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala, ejs
+          plugin_languages_details: lines, bytes-size, percentage
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_indepth: yes
+          plugin_languages_limit: 2
+          plugin_topics: yes
+          plugin_topics_limit: 0
+          plugin_topics_mode: icons
           plugin_notable: yes
+          plugin_discussions: yes
