--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           base: ""
           config_order: anilist, music
           output_action: gist
-          committer_gist: https://gist.github.com/GeovaneSFT/3f6f6bbd700a672dc63c01379ffb7b6b.js
+          committer_gist: https://gist.github.com/GeovaneSFT
           plugin_anilist: yes
           plugin_anilist_medias: anime
           plugin_anilist_user: Blimblim
@@ -49,7 +49,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           output_action: gist
-          committer_gist: https://gist.github.com/GeovaneSFT/3f6f6bbd700a672dc63c01379ffb7b6b.js
+          committer_gist: https://gist.github.com/GeovaneSFT
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_fortune: yes
@@ -62,7 +62,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           output_action: gist
-          committer_gist: https://gist.github.com/GeovaneSFT/3f6f6bbd700a672dc63c01379ffb7b6b.js
+          committer_gist: https://gist.github.com/GeovaneSFT
           plugin_sponsors: yes
           plugin_sponsors_past: yes
           plugin_sponsorships: yes
@@ -78,7 +78,7 @@ jobs:
           base_indepth: yes
           config_order: base.header, isocalendar, languages, notable, discussions, topics
           output_action: gist
-          committer_gist: https://gist.github.com/GeovaneSFT/3f6f6bbd700a672dc63c01379ffb7b6b.js
+          committer_gist: https://gist.github.com/GeovaneSFT
           plugin_isocalendar: yes
           plugin_languages: yes
           plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala, ejs
